<resources>
    <string name="goucaidating">购彩大厅</string>
    <string name="kaijiangxinxi">开奖公告</string>
    <string name="zhanghuchongzhi1">账户充值</string>
    <string name="caipiaozixun">彩票资讯</string>
    <string name="more">更多</string>
    <string name="lottery_info">彩票资讯</string>
    <string name="action_center">活动中心</string>
    <string name="luckey_choose">幸运选号</string>
    <string name="app_name">如意彩票</string>
    <string name="shuangseqiu">双色球</string>
    <string name="fucai3d">福彩3D</string>
    <string name="qilecai">七乐彩</string>
    <string name="daletou">超级大乐透</string>
    <string name="pailie3">排列三</string>
    <string name="menu_checkupdate">检测更新</string>
    <string name="menu_introduce">新手指南</string>
    <string name="menu_userexit">注销登陆</string>
    <string name="menu_orderprize">开奖订阅</string>
    <string name="menu_feedback">我要反馈</string>
    <string name="menu_help">帮助中心</string>
    <string name="menu_about">关于我们</string>
    <string name="more_updateuser">切换用户</string>
    <string name="backtohomepage">返回</string>
    <string name="returnlastpage">返回</string>
    <string name="dingyue">订阅</string>
    <string name="quit">退出</string>
    <string name="quit_message">您确定要离开如意彩</string>
    <string name="login_register">登录/注册</string>
    <string name="logout">注销</string>
    <string name="welcome">欢迎使用</string>
    <string name="login">登" "录</string>
    <string name="switchtxt">切" "换</string>
    <string name="cancel">取" "消</string>
    <string name="enter">进" "入</string>
    <string name="str_return">返回</string>
    <string name="kaijianggonggao">开奖</string>
    <string name="goucaitouzhu">购彩</string>
    <string name="zhanghuchongzhi">充值</string>
    <string name="zhuanjiafenxi">专家荐号</string>
    <string name="ruyizhushou">如意助手</string>
    <string name="bangzhuzhongxin">帮助中心</string>
    <string name="xitongshezhi">系统设置</string>
    <string name="ruyitaocan">如意套餐</string>
    <string name="xingyunxuanhao">幸运选号</string>
    <string name="ruyichuangqing">如意传情</string>
    <string name="yonghuzhongxin">用户中心</string>
    <string name="tesetouzhu">特色投注</string>
    <string name="chaxunxinxi">查询信息</string>
    <string name="zhanghuguanli">账户管理</string>
    <string name="gongsijianjie">公司简介</string>
    <string name="yonghufankui">用户反馈</string>
    <string name="gengduo">更多</string>
    <string name="danshi">单式</string>
    <string name="fushi">复式</string>
    <string name="dantuo">胆拖</string>
    <string name="twoin12">12选2</string>
    <string name="jixuan">机选</string>
    <string name="touzhu">投注</string>
    <string name="zhixuan">直选</string>
    <string name="zuxuan3">组3</string>
    <string name="zuxuan6">组6</string>
    <string name="hezhi">和值</string>
    <string name="zu6">单/复式</string>
    <string name="danma">胆码(1~2)</string>
    <string name="tuoma">拖码(1~9)</string>
    <string name="baiwei">百位</string>
    <string name="shiwei">十位</string>
    <string name="gewei">个位</string>
    <string name="hezhi_zhixuan">和值-直选</string>
    <string name="hezhi_zu3">和值-组3</string>
    <string name="hezhi_zu6">和值-组6</string>
    <string name="choose_zhixuan_title">请选择小球个数</string>
    <string name="zhixuan_danshi_dialog_tips">当前玩法为直选单式</string>
    <string name="zhixuan_fushi_dialog_tips">当前玩法为直选复式</string>
    <string name="zu3_fushi_dialog_tips">当前玩法为组3复式</string>
    <string name="zu6_danshi_dialog_tips">当前玩法为组6单式</string>
    <string name="zu6_fushi_dialog_tips">当前玩法为组6复式</string>
    <string name="caiminyingxiongbang">中奖排行榜</string>
    <string name="week">周</string>
    <string name="total">总</string>
    <string name="zhixuanhezhi_dialog_tips">当前玩法为和值直选</string>
    <string name="zu3hezhi_dialog_tips">当前玩法为和值组3</string>
    <string name="zu6hezhi_dialog_tips">当前玩法为和值组6</string>
    <string name="dantuo_danma_dialog_tips">请选择1~2位胆码</string>
    <string name="dantuo_tuoma_dialog_tips">请选择1~9位拖码</string>
    <string name="dantuo_dialog_tips">胆码和拖码的小球不少于3个</string>
    <string name="please_choose_number">请选择投注号码</string>
    <string name="please_choose_red_number">请选择红球号码</string>
    <string name="please_choose_blue_number">请选择蓝球号码</string>
    <string name="red_ball_field">红球区</string>
    <string name="blue_ball_field">蓝球区</string>
    <string name="red_ball_danma">红球胆码区(请选择1-5个号码)</string>
    <string name="red_ball_tuoma">红色拖码区(请选择2-20个号码)</string>
    <string name="table_ball_danma">胆码区(请选择1-6个号码)</string>
    <string name="table_ball_tuoma">拖码区</string>
    <string name="dlt_zhuijia_text">追加投注</string>
    <string name="front_field">前区：</string>
    <string name="rear_field">后区：</string>
    <string name="dlt_zhixuan_front_edit_text">点击选取前区小球</string>
    <string name="dlt_zhixuan_rear_edit_text">点击选取后区小球</string>
    <string name="front_ball_danma">前区胆码：</string>
    <string name="front_ball_tuoma">前区拖码：</string>
    <string name="rear_ball_danma">后区胆码：</string>
    <string name="rear_ball_tuoma">后区拖码：</string>
    <string name="please_choose_red_number_dlt">请选择前区号码</string>
    <string name="please_choose_blue_number_dlt">请选择后区号码</string>
    <string name="zi_xuanzedezhuma">注码：</string>
    <string name="dlt_zhixuan">大乐透直选</string>
    <string name="dlt_zhixuan_jixuan">大乐透直选机选</string>
    <string name="dlt_dantuo">大乐透胆拖</string>
    <string name="dlt_dantuo_jixuan">大乐透胆托机选</string>
    <string name="dlt_12xuan2">大乐透12选2</string>
    <string name="dlt_12xuan2_jixuan">大乐透12选2机选</string>
    <string name="dlt_jixuanzhushu">注数：</string>
    <string name="dlt12xuan2jixuanzhushu">12选2机选注数</string>
    <string name="plesechosejixuanzhushu">请选择机选注数</string>
    <string name="dltzhixuanjixuanzhushu">大乐透直选机选注数</string>
    <string name="dlt_dantuo_tishi">已处于胆托投注页面</string>
    <string name="dltdayu10w">彩票基本投注的最大投注金额不超过20000元，基本投注加追加投注的最大投注金额不超过30000元。</string>
    <string name="sscmax10w">单笔投注不能大于100000元</string>
    <string name="dlt_toast_front_danma_title">选号重复，前区拖码被覆盖！</string>
    <string name="dlt_toast_front_tuoma_title">选号重复，前区胆码被覆盖！</string>
    <string name="dlt_toast_rear_danma_title">选号重复，后区胆码被覆盖！</string>
    <string name="dlt_toast_rear_tuoma_title">选号重复，后区拖码被覆盖！</string>
    <string name="blue_ball_dantuo">蓝球区(1-16个)</string>
    <string name="toggle_on">" "机选</string>
    <string name="toggle_off">" "自选</string>
    <string name="choose_number_dialog_title_fushi">请选择复式小球个数</string>
    <string name="choose_number_dialog_tip1">当前小球数为单式玩法</string>
    <string name="choose_number_dialog_tip2">当前玩法为红复式</string>
    <string name="choose_number_dialog_tip3">当前玩法为蓝复式</string>
    <string name="choose_number_dialog_tip4">当前玩法为全复式</string>
    <string name="choose_number_dialog_title_dantuo">请选择胆拖小球个数</string>
    <string name="choose_number_dialog_tip5">请选择胆码、拖码</string>
    <string name="choose_number_dialog_tip6">请选择蓝球</string>
    <string name="choose_number_dialog_tip7">当前玩法为单式</string>
    <string name="choose_number_dialog_tip8">当前玩法为复式</string>
    <string name="choose_number_dialog_tip9">请选择前区胆码、拖码和后区胆码、拖码</string>
    <string name="choose_number_dialog_tip10">请选择前区胆码、拖码</string>
    <string name="choose_number_dialog_tip11">请选择后区胆码、拖码</string>
    <string name="choose_number_dialog_tip2_dlt">当前玩法为前区复式</string>
    <string name="choose_number_dialog_tip3_dlt">当前玩法为后区复式</string>
    <string name="choose_number_dialog_tip4_dlt">当前玩法为全复式</string>
    <string name="zhuijia_touzhu">" "追加投注</string>
    <string name="mbeishu">倍</string>
    <string name="meiqibeishu">倍数：</string>
    <string name="zhuihaoqishu">期数：</string>
    <string name="zuida200bei">（最大200倍）</string>
    <string name="zuiduo200qi">（最多200期）</string>
    <string name="zuida50bei">（最大50倍）</string>
    <string name="zuida99bei">（最大99倍）</string>
    <string name="zuiduo99qi">（最多99期）</string>
    <string name="please_input_red_ball_num">请选择红球个数：</string>
    <string name="please_input_blue_ball_num">请选择蓝球个数：</string>
    <string name="user_login">用户登录</string>
    <string name="login_find_password"><u>找回登录密码</u></string>
    <string name="forget_password_btn">立即找回</string>
    <string name="forget_password_text_hint">您要找回密码的用户名</string>
    <string name="login_phoneNumber">用户名:</string>
    <string name="login_password">密"   "码:</string>
    <string name="loginTitle">请登录</string>
    <string name="login_dialog_ok">确定</string>
    <string name="login_dialog_cancel">取消</string>
    <string name="remember_phoneNum">记住手机号</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="regNewUser">注" "册</string>
    <string name="please_enter_phone_number">请输入您的手机号</string>
    <string name="please_enter_phone_name">用户名/手机号/邮箱</string>
    <string name="please_enter_phone_password">6-16个字母，数字组成</string>
    <string name="please_enter_phone_password_two">重新输入密码</string>
    <string name="please_enter_name">请输入您的真实姓名</string>
    <string name="please_enter_id">请输入您的身份证号码</string>
    <string name="please_enter_referrer">请输入您的推荐人</string>
    <string name="please_enter_card_num">请输入如意卡号</string>
    <string name="please_enter_card_password">请输入卡密码</string>
    <string name="please_remember_pwd">请输入密码</string>
    <string name="reg_new_user">注" "册</string>
    <string name="forget_password">忘记密码</string>
    <string name="register">注" "册</string>
    <string name="register_login_phoneNumber">用"  "户"  "名:</string>
    <string name="findpass_phoneNumber">手机号:</string>
    <string name="register_login_password">密"       "码:</string>
    <string name="register_login_name">真实姓名:</string>
    <string name="register_confirm_password">确认密码:</string>
    <string name="register_id_num">身份证号码:</string>
    <string name="register_referrer">推荐人:</string>
    <string name="register_id_card">如意彩票卡:</string>
    <string name="register_id_card_password">卡密码:</string>
    <string name="register_refer_info_1">如意彩服务协议请参阅</string>
    <string name="register_refer_info_2">http://www.ruyicai.com/ruyicai/web/help/xieyi.jsp    </string>
    <string name="giveCall">立即拨打</string>
    <string name="return_button">返回</string>
    <string name="register_free_info">手机号码、真实姓名和身份证号码是彩票兑奖的重要依据，为保障您的合法权益，建议您注册时绑定身份证信息！    </string>
    <string name="forget_password_hint">如果您尚未绑定手机号或用户名忘记了,请点击拨打如意彩客服电话400-665-1000,让客服人员协助您找回密码。    </string>
    <string name="directly_payment">直接支付</string>
    <string name="usercenter_changePWD">密码修改</string>
    <string name="usercenter_unbind">解除绑定</string>
    <string name="usercenter_whetherunbind">是否解除绑定?</string>
    <string name="usercenter_youremail">您绑定的邮箱地址为:</string>
    <string name="usercenter_originalPassword">原始密码：</string>
    <string name="usercenter_newPassword">新 密 码：</string>
    <string name="usercenter_confirmNewPassword">确认密码：</string>
    <string name="usercenter_submit">提 交</string>
    <string name="ssq_bettingsuccess_money">金额:</string>
    <string name="ssq_bettingsuccess_lotnotype">彩种:</string>
    <string name="toast_touzhu_title">温馨提示</string>
    <string name="jclq_sfc_dialog_title01">主胜1-5分</string>
    <string name="jclq_sfc_dialog_title02">主胜6-10分</string>
    <string name="jclq_sfc_dialog_title03">主胜11-15分</string>
    <string name="jclq_sfc_dialog_title04">主胜16-20分</string>
    <string name="jclq_sfc_dialog_title05">主胜21-25分</string>
    <string name="jclq_sfc_dialog_title06">主胜26分以上</string>
    <string name="jclq_sfc_dialog_title11">主负1-5分</string>
    <string name="jclq_sfc_dialog_title12">主负6-10分</string>
    <string name="jclq_sfc_dialog_title13">主负11-15分</string>
    <string name="directpay_dialog_torecharge">去充值</string>
    <string name="beijingsinglegame_textview_wintieloss">北单让球胜平负</string>
    <string name="beijingsinglegame_textview_totalgoals">北单总进球数</string>
    <string name="beijingsinglegame_textview_overall">全场总比分</string>
    <string name="beijingsinglegame_textview_halftheaudience">北单半全场</string>
    <string name="beijingsinglegame_textview_updownsigledouble">北单上下单双</string>
    <string name="task_get_free_gold_title">做任务，免费获取彩金</string>
</resources>