<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://www.ruyicai.com/res/custom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <com.ruyicai.custom.checkbox.MyCheckBox
            android:id="@+id/lq_sfc_dialog_check01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/check_lq_select"
            android:gravity="center_horizontal"
            android:textSize="12sp"
            custom:check_title="@string/jclq_sfc_dialog_title01" />

        <View
            android:layout_width="10dip"
            android:layout_height="1dip"
            android:background="@android:color/transparent" />

        <com.ruyicai.custom.checkbox.MyCheckBox
            android:id="@+id/lq_sfc_dialog_check02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/check_lq_select"
            android:gravity="center_horizontal"
            android:textSize="12sp"
            custom:check_title="@string/jclq_sfc_dialog_title02" />

        <View
            android:layout_width="10dip"
            android:layout_height="1dip"
            android:background="@android:color/transparent" />

        <com.ruyicai.custom.checkbox.MyCheckBox
            android:id="@+id/lq_sfc_dialog_check03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/check_lq_select"
            android:gravity="center_horizontal"
            android:textSize="12sp"
            custom:check_title="@string/jclq_sfc_dialog_title03" />

        <View
            android:layout_width="10dip"
            android:layout_height="1dip"
            android:background="@android:color/transparent" />

        <com.ruyicai.custom.checkbox.MyCheckBox
            android:id="@+id/lq_sfc_dialog_check04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/check_lq_select"
            android:gravity="center_horizontal"
            android:textSize="12sp"
            custom:check_title="@string/jclq_sfc_dialog_title04" />

        <View
            android:layout_width="10dip"
            android:layout_height="1dip"
            android:background="@android:color/transparent" />

        <com.ruyicai.custom.checkbox.MyCheckBox
            android:id="@+id/lq_sfc_dialog_check05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/check_lq_select"
            android:gravity="center_horizontal"
            android:textSize="12sp"
            custom:check_title="@string/jclq_sfc_dialog_title05" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <com.ruyicai.custom.checkbox.MyCheckBox
            android:id="@+id/lq_sfc_dialog_check06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/check_lq_select"
            android:gravity="center_horizontal"
            android:textSize="12sp"
            custom:check_title="@string/jclq_sfc_dialog_title06" />

        <View
            android:layout_width="10dip"
            android:layout_height="1dip"
            android:background="@android:color/transparent" />

        <com.ruyicai.custom.checkbox.MyCheckBox
            android:id="@+id/lq_sfc_dialog_check07"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/check_lq_select"
            android:gravity="center_horizontal"
            android:textSize="12sp"
            custom:check_title="@string/jclq_sfc_dialog_title11" />

        <View
            android:layout_width="10dip"
            android:layout_height="1dip"
            android:background="@android:color/transparent" />

        <com.ruyicai.custom.checkbox.MyCheckBox
            android:id="@+id/lq_sfc_dialog_check08"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/check_lq_select"
            android:gravity="center_horizontal"
            android:textSize="12sp"
            custom:check_title="@string/jclq_sfc_dialog_title12" />

        <View
            android:layout_width="10dip"
            android:layout_height="1dip"
            android:background="@android:color/transparent" />

        <com.ruyicai.custom.checkbox.MyCheckBox
            android:id="@+id/lq_sfc_dialog_check09"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/check_lq_select"
            android:gravity="center_horizontal"
            android:textSize="12sp"
            android:layout_weight="1"
            custom:check_title="@string/jclq_sfc_dialog_title13" />

        <View
            android:layout_width="10dip"
            android:layout_height="1dip"
            android:background="@android:color/transparent" />

        <com.ruyicai.custom.checkbox.MyCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="12sp"
            android:layout_weight="1"
            android:visibility="invisible"
            custom:check_title="@string/jclq_sfc_dialog_title13" />
    </LinearLayout>

</LinearLayout>