<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/beidan_play_change_layout"
    android:layout_width="300dip"
    android:layout_height="200dip"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="45dip"
    android:background="@drawable/jc_play_select_background"
    android:orientation="vertical"
    android:visibility="gone" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:orientation="horizontal"
        android:paddingTop="20dip" >

        <Button
            android:id="@+id/beijingsinglegame_playmethodchange_button_wintieloss"
            android:layout_width="90dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1.0"
            android:background="@drawable/beijing_playmethodbutton_normal"
            android:text="@string/beijingsinglegame_textview_wintieloss" />

        <Button
            android:id="@+id/beijingsinglegame_playmethodchange_button_totalgoals"
            android:layout_width="90dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.0"
            android:background="@drawable/beijing_playmethodbutton_normal"
            android:text="@string/beijingsinglegame_textview_totalgoals" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/beijingsinglegame_playmethodchange_button_overall"
            android:layout_width="90dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1.0"
            android:background="@drawable/beijing_playmethodbutton_normal"
            android:text="@string/beijingsinglegame_textview_overall" />

        <Button
            android:id="@+id/beijingsinglegame_playmethodchange_button_halftheaudience"
            android:layout_width="90dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.0"
            android:background="@drawable/beijing_playmethodbutton_normal"
            android:text="@string/beijingsinglegame_textview_halftheaudience" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/beijingsinglegame_playmethodchange_button_updownsigledouble"
            android:layout_width="90dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1.0"
            android:background="@drawable/beijing_playmethodbutton_normal"
            android:text="@string/beijingsinglegame_textview_updownsigledouble" />

        <Button
            android:layout_width="90dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1.0"
            android:background="@drawable/beijing_playmethodbutton_normal"
            android:enabled="false"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>