<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content" android:background="#FFFFFF"
	android:layout_marginLeft="5dp" android:layout_marginRight="5dp">
	<LinearLayout android:orientation="horizontal"  android:gravity="center_horizontal"
		android:id="@+id/titletext_football" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:paddingTop="5dip"
		android:background="@drawable/shouye_top">
		<TextView  android:text="@string/usercenter_changePWD"
			style="@style/UserTitleText" />
	</LinearLayout>
	<LinearLayout android:orientation="vertical"
		android:layout_below="@+id/titletext_football" android:layout_width="fill_parent"
		android:id="@+id/usercenter_changepwd_content" android:layout_height="wrap_content"
		android:paddingTop="5dip">
		<RelativeLayout android:id="@+id/linearlayout_usercenter_originalpwd"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView 
				android:layout_centerVertical="true" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_alignParentLeft="true"
				android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:textSize="16dip"
				android:text="@string/usercenter_originalPassword" android:textColor="@color/black"/>
			<!-- wyl edit password TRUE -->
			<!-- wyl 7.21 edit password length -->
			<EditText android:id="@+id/usercenter_edittext_originalpwd"
				android:layout_width="160dip" android:layout_height="wrap_content"
				android:layout_alignParentRight="true" android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip" android:password="true"
				android:maxLength="16" />
		</RelativeLayout>
		<RelativeLayout android:id="@+id/linearlayout_usercenter_newpwd"
			android:orientation="horizontal" android:layout_below="@+id/linearlayout_usercenter_originalpwd"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
			<TextView  android:textColor="@color/black"
				android:layout_centerVertical="true" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_alignParentLeft="true"
				android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:textSize="16dip"
				android:text="@string/usercenter_newPassword" />
			<!-- wyl 7.21 edit password length -->
			<EditText android:id="@+id/usercenter_edittext_newpwd" android:textColor="@color/black"
				android:layout_width="160dip" android:layout_height="wrap_content"
				android:layout_alignParentRight="true" android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip" android:password="true"
				android:maxLength="16" />
		</RelativeLayout>
		<RelativeLayout android:id="@+id/linearlayout_usercenter_confirmnewpwd"
			android:orientation="horizontal" android:layout_below="@+id/linearlayout_usercenter_newpwd"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
			<TextView android:textColor="@color/black"
				android:layout_centerVertical="true" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_alignParentLeft="true"
				android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:textSize="16dip"
				android:text="@string/usercenter_confirmNewPassword" />
			<!-- wyl 7.21 edit password length -->
			<EditText android:id="@+id/usercenter_edittext_confirmnewpwd" 
				android:layout_width="160dip" android:layout_height="wrap_content"
				android:layout_alignParentRight="true" android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip" android:password="true"
				android:maxLength="16" />
		</RelativeLayout>
	</LinearLayout>
	<LinearLayout android:orientation="horizontal" android:gravity="center_vertical"
		android:layout_below="@+id/usercenter_changepwd_content"
		android:layout_width="fill_parent" android:background="@drawable/buy_bot_bg"
		android:layout_height="70dp" android:paddingTop="5dip">

		<LinearLayout android:layout_weight="1" android:gravity="center"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
			<Button android:id="@+id/usercenter_changepwd_submit" style="@style/UserBottomButton"
				android:text="@string/usercenter_submit" 
				 />
		</LinearLayout>
		<LinearLayout android:layout_weight="1" android:gravity="center"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
			<Button android:id="@+id/usercenter_changepwd_back" style="@style/UserBottomButton"
				android:text="@string/return_button"/>
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>