<?xml version="1.0" encoding="utf-8"?>
<!-- 余额不足页面 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <!-- 标题栏 -->

    <RelativeLayout
        android:id="@+id/insufficient_balance_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shouye_top" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/toast_touzhu_title"
            android:textColor="@color/white"
            android:textSize="20sp" >
        </TextView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/insufficient_balance_title"
        android:layout_margin="20dp"
        android:orientation="vertical" >

        <!-- 彩种类型 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/touzhuTextstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ssq_bettingsuccess_lotnotype" />

            <TextView
                android:id="@+id/insufficient_balance_lottype"
                style="@style/touzhuTextstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- 余额 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/touzhuTextstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ssq_bettingsuccess_money" />

            <TextView
                android:id="@+id/insufficient_balance_amt"
                style="@style/touzhuTextstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- 余额不足提示语 -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="尊敬的用户，您的账户余额不足以支付本次购买，请选择充值或者直接支付两种方式完成本次购买操作."
            android:textColor="@color/black" 
            android:textSize="15sp"/>
    </LinearLayout>
    
    <Button android:id="@+id/free_get_gold_button"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginRight="18sp"
        android:layout_marginLeft="18sp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:text="@string/task_get_free_gold_title"
        android:background="@drawable/loginselecter"
        android:layout_marginBottom="80dip"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buy_bot_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp">

            <!-- 直接支付按钮 -->

            <Button
                android:id="@+id/insufficient_balance_button_directpay"
                android:layout_width="120dip"
                android:layout_height="40sp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="18sp"
                android:background="@drawable/loginselecter"
                android:text="@string/directly_payment"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <!-- 去充值按钮 -->

            <Button
                android:id="@+id/insufficient_balance_button_recharge"
                android:layout_width="120dip"
                android:layout_height="40sp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="18sp"
                android:background="@drawable/loginselecter"
                android:text="@string/directpay_dialog_torecharge"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="(使用支付宝直接支付)"
                android:textSize="11sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.60"
                android:gravity="center"
                android:text="(选择多种方式给账户充值)"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>